inventory filter align fix

--- a/apps/web-giddh/src/app/new-inventory/component/report-filters/report-filters.component.scss
+++ b/apps/web-giddh/src/app/new-inventory/component/report-filters/report-filters.component.scss
@@ -59,47 +59,7 @@
     column-gap: 5px;
 }
 
-@media (max-width: 1440px) {
-    .inventory-filter-bar {
-        .search-control {
-            .icon-input {
-                float: left;
-                width: 70%;
-            }
-
-            .menu-btn-control {
-                width: 30%;
-            }
-        }
-    }
-}
-@media (max-width: 1680px) {
-    .inventory-filter-bar {
-        .search-control {
-            .icon-input {
-                float: left;
-                width: 65%;
-            }
-            .menu-btn-control {
-                width: 35%;
-            }
-        }
-    }
-}
-
 @media (max-width: 1199px) {
-    .inventory-filter-bar {
-        .search-control {
-            .icon-input {
-                float: left;
-                width: 60%;
-            }
-            .menu-btn-control {
-                width: 40%;
-            }
-        }
-    }
-
     .stock-mat-salect {
         min-width: 187px;
     }
